# Auto-Company

./: .auto-loop-opencode-state  .auto-loop-qwen-state  .gitattributes  .gitignore  .progress.json  AGENTS.md  CLAUDE.md  INDEX.md  Makefile  PROMPT.md  QWEN.md  README-ZH.md  README.md
.claude/agents/: ceo-bezos.md
.github/workflows/: ci.yml  image-api.yml  webhookrelay-pages.yml
.qwen/: QWEN.md  settings.json
dashboard/: app-enhanced.js  app-macos.js  index-enhanced.html  index-macos.html  login.html  requirements.txt  server-enhanced.py  server-macos.py
dashboard/lib/: __init__.py  auth.py  metrics.py  status.py  utils.py
dashboard/tests/: test_auth.py  test_structured_logs.py
docs/: windows-setup.md
memories/: consensus.md
projects/emailguard/: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
projects/emailguard/app/: __init__.py  config.py  main.py  models.py  routes.py  validator.py
projects/emailguard/tests/: test_validator.py
projects/image-api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt  test-checklist.md
projects/image-api/app/: __init__.py  config.py  main.py  processor.py  processor_pillow.py  processor_pyvips.py
projects/image-api/docs/: adr.md  deploy-guide.md  market-analysis.md  premortem.md  qa-review-ratelimit.md  qa-review.md  technical-feasibility.md  unit-economics.md
projects/image-api/tests/: __init__.py  test_api.py
projects/webhookrelay/: README.md  index.html  styles.css  test-checklist.md
(+107 files in other folders)
