[project]
name = "emailguard"
version = "0.1.0"
description = "Self-hosted email validation service"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Auto Company", email = "hello@auto.company"}
]
keywords = ["email", "validation", "api", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/auto-company/emailguard"
Documentation = "https://docs.emailguard.dev"
Repository = "https://github.com/auto-company/emailguard"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]